feat: 同步 Fabric 1.19.2 完整功能基线